Revision history for File-Unpack

	jw, Tue Aug 31 01:46:33 CEST 2010
	Added option one_shot, to new() and file_unpack.pl
	Added unpacking of application/pdf
	Added '# Requires: ....' comments with the builtin handlers to document 
	the non-perlish dependencies. 

0.22	jw, Sun Aug 29 23:27:59 CEST 2010
	Fixed descending of destdir into subdirs of subdirs
	Added t/04-subdir.t, 
	Added first support for running unpack() under -T
	Replaced MANIFEST.SKIP with a filter in t/manifest.t
	Fixed t/02-mime.t to survive missing shared-mime-info.
	(Makefile.PL cannot require non-perl packages, can it?)

0.21	jw, Wed Aug 25 22:15:48 CEST 2010
        Added 'nothing-to-do' semantic for mime-helpers: Point back by symlink.
   	Added helper/text=x-shellscript to demonstrate this.
	Made external mime-helpers work: registering, calling.
	Remember absolut path, call mime_type() correctly.
	Started to propagate errors from _run_mime_handler() to unpack().
	mime(): In SLES11 we get 'text/plain charset=utf-8' without semicolon.

0.20	jw, Tue Aug 24 21:15:49 CEST 2010
	POD polishing. Synopsis now has some illustrative code.

0.19	jw, Tue Aug 24 15:42:49 CEST 2010
	Added _finalize_argvv() to call _locate_*() functions only if 
	find_mime_handler() needs it. Added _locate_tar() and _locate_cpio_i;
	Converted sub _builtin_mime_handlers back into @builtin_mime_handlers;
	Debugged run(); piping was broken. Made new(jail_chmod0 => 1) optional.

0.18	jw, Tue Aug 24 02:13:47 CEST 2010
	Added handlers for x-tar+bzip2, x-tar+gzip, x-rpm;
	Converted @builtin_mime_handlers into sub _builtin_mime_handlers;
	Converted system() tests of tar options to run() tests. Added tests for 
	cpio too. Secured pump inside eval {}. 
	Added fmt_run_shellcmd() to the API; thus fixed file_unpac.pl -m ...

0.17	jw, Mon Aug 23 11:36:04 CEST 2010
	Made the test suite run again with -t

0.16	jw, Mon Aug 23 01:28:09 CEST 2010
	added tar handler. debugged dir unpacking, copy-in, 
	destdir=jail, and def_mime_handler_fmt.
