@@ -2,9 +2,10 @@ Revision history for File-Unpack
 
 	jw, Tue Aug 31 01:46:33 CEST 2010
 	Added option one_shot, to new() and file_unpack.pl
-	Added unpacking of application/pdf
+	Added unpacking of: application/pdf, %tar+lzma, %rar, %uuencode
 	Added '# Requires: ....' comments with the builtin handlers to document 
 	the non-perlish dependencies. 
+	Fixed recognition of .xls -- File::LibMagic said corrupt, with only a short buffer.
 
 0.22	jw, Sun Aug 29 23:27:59 CEST 2010
 	Fixed descending of destdir into subdirs of subdirs
